--- a/client/src/Css/HeroSection.css
+++ b/client/src/Css/HeroSection.css
@@ -1,3 +1,16 @@
+.container { position:relative; }
+.container video {
+    position:relative;
+    z-index:0;
+}
+.overlay {
+    position:absolute;
+    top:0;
+    left:0;
+    z-index:1;
+}
+
+
 video {
   object-fit: cover;
   height: 100%;
@@ -5,25 +18,28 @@ video {
   float: left;
   top: 0;
   padding: none;
-  z-index: -1;
+  z-index: 0;
+  position: relative;
 }
 
 .hero-container {
-  /* background: url("../background-1.jpg"); */
   height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
   object-fit: contain;
+  position: relative;
 }
 
 .hero-container > h1 {
   color: #fff;
   font-size: 100px;
-  margin-top: -100px;
+  margin-top: -530px;
+  top:0;
+  left:0;
+  z-index:1;
 }
 
 .hero-container > p {
@@ -32,10 +48,14 @@ video {
   font-size: 32px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
+  z-index: 1;
 }
 
 .hero-btns {
   margin-top: 32px;
+  display: flex;
+  flex-direction: row;
+  z-index: 1;
 }
 
 .hero-btns .btn {
@@ -49,18 +69,24 @@ video {
 @media screen and (max-width: 960px) {
   .hero-container > h1 {
     font-size: 70px;
-    margin-top: -150px;
+    margin-top: -300px;
+    top:0;
+    left:0;
+    z-index:1;
   }
 }
 
 @media screen and (max-width: 768px) {
   .hero-container > h1 {
-    font-size: 50px;
-    margin-top: -100px;
+    font-size: 40px;
+    margin-top: -330px;
+    top:0;
+    left:0;
+    z-index:1;
   }
 
   .hero-container > p {
-    font-size: 30px;
+    font-size: 22px;
   }
 
   .btn-mobile {
@@ -69,6 +95,14 @@ video {
   }
 
   .btn {
-    width: 100%;
+    width: 50%;
+    font-size: small;
+  }
+
+  .hero-btns {
+    margin-top: 32px;
+    display: flex;
+    flex-direction: column;
+    z-index: 1;
   }
 }
