--- a/client/src/Css/Navbar.css
+++ b/client/src/Css/Navbar.css
@@ -30,6 +30,18 @@
   align-items: center;
 }
 
+@media screen and (max-width: 768px) {
+  .navbar-logo {
+    margin-top: -20px;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .navbar-logo {
+    margin-top: -20px;
+  }
+}
+
 .fa-typo3 {
   margin-left: 0.5rem;
   font-size: 1.8rem;
